<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.alexeyu</groupId>
	<artifactId>photomate</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject</artifactId>
				<version>1</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>27.0.1-jre</version>
			</dependency>
			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>4.2.2</version>
				<classifier>no_aop</classifier>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>2.11.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>2.11.1</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>2.9.8</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.9.8</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.9.8</version>
			</dependency>
			<dependency>
				<groupId>commons-net</groupId>
				<artifactId>commons-net</artifactId>
				<version>3.4</version>
			</dependency>
			<dependency>
				<groupId>org.imgscalr</groupId>
				<artifactId>imgscalr-lib</artifactId>
				<version>4.2</version>
			</dependency>
			<dependency>
				<groupId>net.coobird</groupId>
				<artifactId>thumbnailator</artifactId>
				<version>0.4.8</version>
			</dependency>
			<dependency>
				<groupId>io.projectreactor</groupId>
				<artifactId>reactor-core</artifactId>
				<version>3.0.3.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>2.24.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>nl.alexeyu</groupId>
				<artifactId>photomate-thumbnail</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.alexeyu</groupId>
				<artifactId>photomate-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.alexeyu</groupId>
				<artifactId>photomate-search</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.alexeyu</groupId>
				<artifactId>photomate-archive</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>nl.alexeyu</groupId>
				<artifactId>photomate-ui</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.jcodec</groupId>
			    <artifactId>jcodec</artifactId>
			    <version>0.2.3</version>
			</dependency>
			<dependency>
			    <groupId>org.jcodec</groupId>
			    <artifactId>jcodec-javase</artifactId>
			    <version>0.2.3</version>
			</dependency>			
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>2.7.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>analyze-dependencies</id>
						<phase>process-test-classes</phase>
						<goals>
							<goal>analyze-dep-mgt</goal>
							<goal>analyze-duplicate</goal>
							<goal>analyze-only</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<failBuild>true</failBuild>
					<failOnWarning>false</failOnWarning>
					<ignoreDirect>false</ignoreDirect>
					<ignoreNonCompile>true</ignoreNonCompile>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<modules>
		<module>photomate-thumbnail</module>
		<module>photomate-core</module>
		<module>photomate-search</module>
		<module>photomate-archive</module>
		<module>photomate-ui</module>
		<module>photomate-app</module>
	</modules>
</project>
